[package]
name = "rusty-timer"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.3"
humantime = "2.1.0"
parse_duration = "2.1.0"
termion = "1.5.5"
futures = { version = "0.3.*" }
tokio = { version = "1.0.2", features = ["full"] }
chrono = "0.4.19"
clap = "3.0.0-beta.2"
