[package]
name = "rusted-timer"
version = "1.1.4"
authors = ["Marcus Buffett <me@mbuffett.com>"]
description = "CLI timer"
homepage = "https://github.com/marcusbuffett/rusty-timer"
repository = "https://github.com/marcusbuffett/rusty-timer"
edition = "2018"
keywords = ["cli", "tool", "timer", "time"]
license = "MIT"

[[bin]]
name = "timer"
path = "src/main.rs"

[dependencies]
figlet-rs = "0.1.3"
humantime = "2.1.0"
parse_duration = "2.1.0"
termion = "1.5.5"
futures = { version = "0.3.*" }
tokio = { version = "1.0.2", features = ["full"] }
chrono = "0.4.19"
clap = "3.0.0-beta.2"
